--- a/src/pages/essay/index.astro
+++ b/src/pages/essay/index.astro
@@ -26,7 +26,7 @@ const nextHref = currentPage < totalPages ? `/essay/page/${currentPage + 1}/` : 
   <div class="list">
     {pageEssays.map((e) => (
       <EssayCard
-        href={`/essay/${e.data.slug ?? e.id}/`}
+        href={`/archive/${e.data.slug ?? e.id}/`}
         title={e.data.title}
         excerpt={getListExcerpt(e)}
         date={e.data.date}
