--- a/src/pages/bits/index.astro
+++ b/src/pages/bits/index.astro
@@ -25,6 +25,7 @@ const rendered = await Promise.all(
   <div class="bits-toolbar">
     <div class="bits-controls">
       <div class="bits-search">
+        <label class="sr-only" for="bits-search">搜索絮语</label>
         <input id="bits-search" type="search" placeholder="搜索：关键词 / 标签" autocomplete="off" />
         <button class="bits-search-btn" id="bits-search-btn" type="button">搜索</button>
       </div>
